# VelociFlow

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Simulation/: CMakeLists.txt
Simulation/Examples/: box_steady.cpp  container_steady.cpp  convection_diffusion_steady.cpp  convection_diffusion_unsteady.cpp  kelvin_helmholtz_unsteady.cpp  lid_driven_cavity_steady.cpp  lid_driven_cavity_unsteady.cpp  pipe_steady.cpp  pipe_with_obstacles_steady.cpp  reynolds_experiment_unsteady.cpp  von_karman_unsteady.cpp
Simulation/src/: ConvectionDiffusionSteady.cpp  ConvectionDiffusionUnsteady.cpp  ConvectionDiffusionUnsteady.hpp  MeshExamples.hpp  NavierStokesSteady.hpp  NavierStokesUnsteady.cpp  SteadyConvectionDiffusionSimulation.cpp  SteadyConvectionDiffusionSimulation.hpp  SteadySimulation.cpp  UnsteadySimulation.hpp  common.hpp  main.cpp
Simulation/src/Examples/: box_steady.cpp  container_steady.cpp  convection_diffusion_steady.cpp  kelvin_helmholtz_unsteady.cpp  lid_driven_cavity_steady.cpp  lid_driven_cavity_unsteady.cpp  pipe_steady.cpp  pipe_with_obstacles_steady.cpp  reynolds_experiment_unsteady.cpp  von_karman_unsteady.cpp
Simulation/src/Simulation/: BulkFaceOperations.cpp  BulkFaceOperations.h  BulkNodeOperations.cpp  BulkNodeOperations.h  ConvectionDiffusion.cpp  NavierStokes.cpp  Simulation.cpp  Simulation.hpp  SteadyConvectionDiffusionSimulation.cpp  SteadyConvectionDiffusionSimulation.hpp  SteadySimulation.cpp  SteadySimulation.hpp  UnsteadySimulation.cpp  UnsteadySimulation.hpp  common.hpp
Simulation/src/Simulation/Equations/: Coefficients.hpp  Equation.cpp  Equation.hpp
Simulation/src/Simulation/Equations/Equations/: ConvectionDiffusionX.hpp  Dye.hpp  MomentumX.hpp  PressureCorrection.cpp
Simulation/src/Simulation/Meshing/: Mesh.cpp  Mesh.hpp
Simulation/src/Simulation/Meshing/Faces/: Face.cpp  Face.hpp
Simulation/src/Simulation/Meshing/Nodes/: MomentumCoefficients.cpp  Node.cpp  Node.hpp  PressureCoefficients.cpp
Simulation/src/Simulation/Simulation/: BulkFaceOperations.cpp  BulkFaceOperations.hpp  BulkNodeOperations.cpp  BulkNodeOperations.hpp  Simulation.cpp  Simulation.hpp
Simulation/src/Simulation/Simulation/Equations/: Coefficients.cpp  Equation.cpp
Simulation/src/Simulation/Simulation/Meshing/: Mesh.cpp  Mesh.hpp
Simulation/src/Simulation/Simulation/Utilities/: Saver.cpp  Saver.hpp
Simulation/src/Simulation/Utilities/: Saver.cpp  Saver.h  Timer.cpp  Timer.hpp
Simulation/tests/: helper.hpp  tests.hpp
SimulationLibrary/: CMakeLists.txt  ConvectionDiffusionSteady.cpp  ConvectionDiffusionSteady.hpp  ConvectionDiffusionUnsteady.cpp  ConvectionDiffusionUnsteady.hpp  DiffusionSteady.cpp  DiffusionSteady.hpp  DiffusionUnsteady.cpp  DiffusionUnsteady.hpp  NavierStokesSteady.cpp  NavierStokesSteady.hpp  NavierStokesUnsteady.cpp  NavierStokesUnsteady.hpp  SimulatorContinuation.cpp  SimulatorContinuation.hpp  SingleConvectionDiffusionSteady.cpp  SingleConvectionDiffusionSteady.hpp  SingleConvectionDiffusionUnsteady.cpp  SingleConvectionDiffusionUnsteady.hpp  common.hpp
SimulationLibrary/Simulation/: ConvectionDiffusion.cpp  ConvectionDiffusion.hpp  ConvectionDiffusionSimulation.cpp  ConvectionDiffusionSimulation.hpp  DiffusionSimulation.cpp  DiffusionSimulation.hpp  NavierStokes.cpp  NavierStokes.hpp  NavierStokesSimulation.cpp  NavierStokesSimulation.hpp  Simulation.cpp  Simulation.hpp  SingleConvectionDiffusionSimulation.cpp  SingleConvectionDiffusionSimulation.hpp
SimulationLibrary/Simulation/Discretization/: Equation.cpp  Equation.hpp
SimulationLibrary/Simulation/Discretization/Equations/: ConvectionDiffusionX.cpp  ConvectionDiffusionX.hpp  ConvectionDiffusionXEquation.cpp  ConvectionDiffusionXEquation.hpp  ConvectionDiffusionY.cpp  ConvectionDiffusionY.hpp  ConvectionDiffusionYEquation.cpp  ConvectionDiffusionYEquation.hpp  DiffusionEquation.cpp  Dye.hpp  DyeEquation.cpp  DyeEquation.hpp  MomentumX.cpp  MomentumX.hpp  MomentumXEquation.cpp  MomentumXEquation.hpp  MomentumYEquation.cpp  MomentumYEquation.hpp  PressureCorrection.cpp  PressureCorrectionEquation.cpp  PressureCorrectionEquation.hpp  SingleConvectionDiffusionEquation.cpp  SingleConvectionDiffusionEquation.hpp
SimulationLibrary/Simulation/Equations/: Coefficients.hpp  Equation.cpp  Equation.hpp
SimulationLibrary/Simulation/Equations/Equations/: DiffusionEquation.hpp  DiffusionX.cpp  DiffusionX.hpp  DiffusionY.cpp  DiffusionY.hpp  Dye.cpp  MomentumY.cpp  MomentumY.hpp  PressureCorrection.cpp  PressureCorrection.hpp
SimulationLibrary/Simulation/Meshing/: Mesh.cpp  Mesh.hpp
SimulationLibrary/Simulation/Meshing/Faces/: BulkFaceOperations.cpp  BulkFaceOperations.hpp  Face.cpp  Face.hpp
SimulationLibrary/Simulation/Meshing/Faces/Boundary/: BoundaryFace.cpp  BoundaryFace.hpp  FixedPressureBoundaryFace.cpp  FixedValueBoundaryFace.cpp  FixedValueBoundaryFace.hpp  FreeBoundaryFace.cpp  InletBoundaryFace.cpp  MovingWallBoundaryFace.cpp  (+4 more)
SimulationLibrary/Simulation/Meshing/Nodes/: BulkNodeOperations.hpp  Node.cpp  Node.hpp
SimulationLibrary/Simulation/Utilities/: Saver.cpp  Saver.hpp  Timer.cpp  Timer.hpp  VerbosityHandler.cpp  VerbosityHandler.hpp
(+222 files in other folders)
